Added output to html page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <input type="text" id="lname" name="lname" value="Madden"><br><br>
         <input type="button" onclick="searchByName()" value="Submit">
     </form> 
+    <br>
+    <p id="output">
+
+    </p>
       
 
     <script src="data.js"></script>
