created placholder function for table output and gallery page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" value="Madden"><br><br>
         <input type="button" onclick="searchByName()" value="Submit">
-    </form> 
+    </form>
+    <br> 
+    <a href=gallery.html>See all people in our database!!!</a>
     <br>
     <p id="output">
 
