added aditional input form options

--- a/index.html
+++ b/index.html
@@ -7,13 +7,31 @@
   <body>
     <form id="nameForm">
         <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="Joy"><br>
+        <input type="text" id="fname" name="fname" value=""><br>
         <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Madden"><br><br>
-        <input type="button" onclick="searchByName()" value="Submit">
+        <input type="text" id="lname" name="lname" value=""><br><br>
+        <label for="idNumber">ID number:</label><br>
+        <input type="text" id="idNumber" name="idNumber" value=""><br>
+        <label for="gender">Gender:</label><br>
+        <input type="text" id="gender" name="gender" value=""><br><br>
+        <label for="dob">Date of Birth:</label><br>
+        <input type="text" id="dob" name="dob" value="dd/mm/yyyy"><br>
+        <label for="height">Height:</label><br>
+        <input type="text" id="height" name="height" value=""><br><br>
+        <label for="weight">Weight:</label><br>
+        <input type="text" id="weight" name="weight" value=""><br>
+        <label for="eyeColor">Eye Color:</label><br>
+        <input type="text" id="eyeColor" name="eyeColor" value=""><br><br>
+        <label for="occupation">Occupation:</label><br>
+        <input type="text" id="occupation" name="occupation" value=""><br>
+        <label for="parentId">Parent's ID Number:</label><br>
+        <input type="text" id="parentId" name="parentId" value=""><br><br>
+        <label for="spouse">Spouse:</label><br>
+        <input type="text" id="spouse" name="spouse" value=""><br><br>
+        <input type="button" value="Submit" onclick="searchByName()">
     </form>
     <br> 
-    <a href=gallery.html>See all people in our database!!!</a>
+    <a href=gallery.html >See all people in our database!!!</a>
     <br>
     <p id="output">
 
