working on get family function and display

--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
     <br> 
     <a href=gallery.html >See all people in our database!!!</a>
     <br>
-    <p id="output">
-
-    </p>
-      
+    <table>
+      <tr>
+        <td>
+          <p id="output"></p>
+        </td>
+        <td>
+          <p id="famOut"></p>
+        </td>
+      </tr>
+    </table> 
 
     <script src="data.js"></script>
     <script src="app.js"></script>
