completed function to display family members and cleaned up some syntax errors found in code

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
     <table>
       <tr>
         <td>
-          <p id="output"></p>
+          <p id="output">
+
+          </p>
         </td>
         <td>
-          <p id="famOut"></p>
+          <p id="famOut">
+            
+          </p>
         </td>
       </tr>
     </table> 
