--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <br>
     <table>
       <tr>
-        <td>
+        <td valign="top">
           <p id="output">
 
           </p>
         </td>
-        <td>
+        <td valign="top">
           <p id="famOut">
             
           </p>
