created function to clear existing results and added a clear button to html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <input type="text" id="parentId" name="parentId" value=""><br><br>
         <label for="spouse">Spouse:</label><br>
         <input type="text" id="spouse" name="spouse" value=""><br><br>
-        <input type="button" value="Submit" onclick="masterSearch(validateInput())">
+        <input type="button" value="Submit" onclick="clearTable();clearTable('famOut');masterSearch(validateInput());">
+        <input type="button" value="Clear" onclick="clearTable();clearTable('famOut');">
     </form>
     <br> 
     <a href=gallery.html >See all people in our database!!!</a>
