added link from gallery back to main page

--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <div><a href="index.html" class="link">Back to Main page!</a></div>
         <p id="output">
 
         </p>
