--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <label for="gender">Gender:</label><br>
         <input type="text" id="gender" name="gender" value=""><br><br>
         <label for="dob">Date of Birth:</label><br>
-        <input type="text" id="dob" name="dob" value="mm/dd/yyyy"><br>
+        <input type="date" id="dob" name="dob"><br>
         <label for="height">Height:</label><br>
         <input type="text" id="height" name="height" value=""><br><br>
         <label for="weight">Weight:</label><br>
